deployments/argocd-extensions/argocd-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: default-cilium-gateway
      sectionName: http
      namespace: cilium
  hostnames:
    - "argocd.192.168.100.242.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
